# actix-real-world

./: Cargo.toml  LICENSE  Makefile  README.md  config.yaml
.github/workflows/: ci-cd.yaml
src/: config.rs  main.rs  run.rs
src/routes/: health.rs
tests/: health.rs
