[package]
name = "actix-real-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
cargo-llvm-cov = "0.6.5"
config = "0.14.0"
serde = { version = "1.0.195", features = ["derive"] }

[dev-dependencies]
reqwest = "0.11.24"
tokio = "1.36.0"
